--- a/web/NuevoEstu_estilos.css
+++ b/web/NuevoEstu_estilos.css
@@ -9,6 +9,7 @@ and open the template in the editor.
 */
 body{
     text-align: center;
+    
 }
 h2{
     display: inline-block;
@@ -16,6 +17,9 @@ h2{
     text-align: center;
     justify-content: center;
     color:#24303c;
+    
+font-family: 'Arima', cursive;
+    
 }
 h2::after,h2::before{
     content: '';
@@ -25,7 +29,11 @@ h2::after,h2::before{
     background-color: currentColor;
     top:0.6em;
     transform: scale(0);
+    transition: all 0.2s ease-in;
       
+}
+h2:hover::before, h2:hover::after{
+    transform: scale(1);
 }
 h2::before{
     left:-140px;
@@ -58,6 +66,6 @@ h2::after{
     border:none;
     padding: 12px;
     color: white;
-    margin: 16 px 0;
+    margin: 16 px 0px;
     font-size:16px;
 }
