--- a/web/Listas_estilos.css
+++ b/web/Listas_estilos.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 body{
     text-align: center;
-    background-color: #ffffeb;
+   background-image: url('fondolist.pgn');
          
 }
 h2{
